# cpp-snake-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: food.cpp  food.h  game_manager.cpp  game_manager.h  map.cpp  map.h  snake.cpp  snake.h
utils/: constants.h  enums.h
